--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -40,7 +40,7 @@
   padding-left: 2rem;
   color: #efefef;
   transition: all 0.8s ease;
-  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.35);
   transition: all 1.5s ease;
 }
 
@@ -65,7 +65,7 @@
   font-size: 1.25rem;
   letter-spacing: -4.5px;
   color: #efefef;
-  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.35);
   transition: all 1.5s ease;
 }
 
@@ -91,6 +91,9 @@
     background-image: url("../../assets/images/dobo-home-vertical.jpg");
     width: 100%;
     height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
   }
 
   .home-header-container {
